# REquiem

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml  render.yaml  requirements.txt
frontend/: next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AttackHeatmap.tsx  AuthForm.tsx  CfgView.tsx  FindingsList.tsx  HashLookup.tsx  HeapTimeline.tsx  IOCPanel.tsx  IdentityCards.tsx  ImportsStrings.tsx  MemoryMap.tsx  NavBar.tsx  PdfButton.tsx  ProcessTree.tsx  ReportView.tsx  SectionsView.tsx  Uploader.tsx  VerdictBanner.tsx
frontend/lib/: api.ts  auth.tsx  investigation.tsx  memory.ts  theme.ts  types.ts
requiem/: __init__.py
requiem/api/: __init__.py  app.py  auth_routes.py  security.py
requiem/attack/: __init__.py  inference.py  techniques.py
requiem/auth/: __init__.py  crypto.py  store.py  tokens.py
requiem/cli/: __main__.py
requiem/core/: config.py  models.py  pipeline.py  triage.py
requiem/dynamic/: base.py  cape.py  cape_map.py  cloud.py  cuckoo.py  hybrid.py  joe.py  normalize.py  sandbox_http.py  simulated.py  triage.py
requiem/intel/: base.py  providers.py  vt_behavior.py
requiem/report/: html.py  pdf.py
requiem/static/: disasm.py  elf.py  language.py  macho.py  packer.py  pe.py  strings_ioc.py  yara_scan.py
rules/: families.yar  requiem_starter.yar
tests/: conftest.py  test_auth.py  test_cape.py  test_cloud.py  test_config.py  test_disasm.py  test_memory.py  test_pdf.py  test_pipeline.py  test_roundtrip.py  test_sandboxes.py  test_security.py
(+5 files in other folders)
